Configure galleria preferences

--- a/templates/index.html
+++ b/templates/index.html
@@ -150,7 +150,11 @@
 
     Galleria.configure({
         imageCrop: false,
-        transition: "fade"
+        transition: null,
+        clicknext: true,
+        showCounter: false,
+        showInfo: false,
+        transitionSpeed: 0,
     });
     Galleria.run("#gallery");
 
