Show first image when pressing up key, remove map key

--- a/templates/index.html
+++ b/templates/index.html
@@ -179,12 +179,9 @@
         this.attachKeyboard({
             right: this.next,
             left: this.prev,
+            up: function() {this.show(0);},
             /* Toggle fullscreen display on press of 'f' key */
             0x46: this.toggleFullscreen,
-            {% if settings.show_map and album.show_map %}
-            /* Toggle map display on press of 'm' key */
-            0x4D: galleryMapToggle,
-            {% endif %}
         });
 
         var gallery = this;
