--- a/static/css/style.css
+++ b/static/css/style.css
@@ -67,14 +67,16 @@ header h1 a:hover, header h2 a:hover {
 }
 #albums ul li {
   display: inline-block;
-  margin: 0 55px 30px 0;
+  margin: 0 20px 30px 0;
   text-align: center;
   vertical-align: top;
   width: 280px;
 }
+/*
 #albums ul li:nth-child(3n+3) {
   margin-right: 0;
 }
+ */
 #albums ul li a img {
   opacity: 1;
   -webkit-transition: opacity 0.2s ease-in;
@@ -112,8 +114,8 @@ header h1 a:hover, header h2 a:hover {
 }
 
 .icons {
-  top: 10px;
-  right: 20px;
+  bottom: 10px;
+  left: 20px;
   padding: 5px;
   z-index: 2;
   position: absolute;
@@ -123,19 +125,10 @@ header h1 a:hover, header h2 a:hover {
   cursor: pointer;
 }
 .icons img {
-  opacity: .7;
+  opacity: .6;
 }
 .icons img:hover {
   opacity: .9;
-}
-
-/* Mimic .galleria-stage to use the same area for the map */
-#galleria-map {
-  position: absolute;
-  bottom: 80px;
-  left: 10px;
-  top: 0;
-  right: 10px;
 }
 
 /* footer */
