Disable thumbnails carousel animation.

--- a/templates/index.html
+++ b/templates/index.html
@@ -140,6 +140,7 @@
       showCounter: false,
       showInfo: false,
       transitionSpeed: 0,
+      carouselSpeed: 0
     });
 
     Galleria.run("#gallery");
