--- a/templates/index.html
+++ b/templates/index.html
@@ -140,8 +140,9 @@
       showCounter: false,
       showInfo: false,
       transitionSpeed: 0,
-      carouselSpeed: 0
-    });
+      carouselSpeed: 0,
+      height: 0.75,
+     });
 
     Galleria.run("#gallery");
 
