--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,5 @@
 body {
+  margin: 1px;
   background-color: #242424;
   color: #aaaaaa;
   text-shadow: 0 1px 3px rgba(0, 0, 0, 0.7);
@@ -7,7 +8,7 @@ body {
 .container {
   margin: 0 auto;
   text-align: left;
-  width: 96%;
+  width: 98%;
 }
 
 a, a:link, a:visited {
@@ -102,8 +103,8 @@ header h1 a:hover, header h2 a:hover {
 /* galleria */
 #gallery {
   line-height: 0;
-  width: 100%;
-  height: 600px;
+  flex: 1;
+  max-height: 900px;
   clear: both;
 }
 #gallery video {
@@ -111,6 +112,10 @@ header h1 a:hover, header h2 a:hover {
   top: 10%;
   width: 100%;
   margin: 0 auto;
+}
+
+#gallery .galleria-container {
+  max-height: inherit;
 }
 
 #gallery .galleria-thumbnails .galleria-image {
