More menu to included template

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,17 +41,11 @@
       </header>
 
       <div id="main" role="main">
+
         {% if album.albums %}
-        <div id="albums">
-          <!-- <h1>Albums</h1> -->
-          <ul>
-            {% for alb in album.albums %}
-            <li><a href="{{ alb.url }}">
-              <img src="{{ alb.thumbnail }}" class="album_thumb" alt="{{ alb.name }}" title="{{ alb.name }}" /></a>
-              <span class="album_title">{{ alb.title }}</span>
-            </li>
-            {% endfor %}
-          </ul>
+        <div class="menu">
+            {% set parent = '' %}
+            {% include './menu.html' %}
         </div>
         {% endif %}
 
