--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,6 +40,44 @@ header h1 a:hover, header h2 a:hover {
   text-decoration: none;
 }
 
+#main {
+  display: flex;
+}
+
+.menu {
+  font-variant: all-small-caps;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.menu ul {
+  padding-left: 0;
+  list-style-type: none;
+}
+
+
+.menu ul ul {
+  padding-left: 7px;
+  font-size: 16px;
+}
+
+.menu ul ul ul {
+  padding-left: 10px;
+  font-size: 15px;
+}
+
+.menu a,
+.menu a:link,
+.menu a:visited {
+  text-decoration: none;
+  display: block;
+  color: #eeeeee;
+}
+
+.menu a:hover {
+  color: #ffffff;
+}
+
 #menu ul {
   list-style-type: none;
   margin: 0 0 10px;
