--- a/templates/index.html
+++ b/templates/index.html
@@ -16,30 +16,6 @@
   </head>
   <body>
     <div class="container">
-      <header>
-        <h1><a href="{{ album.index_url }}">{{ index_title }}</a></h1>
-
-        {% if settings.links %}
-        <nav id="menu">
-          <ul>
-            {% for title, link in settings.links %}
-            <li><a href="{{ link }}">{{ title }}</a></li>
-            {% endfor %}
-          </ul>
-        </nav>
-        {% endif %}
-
-        {% if album.breadcrumb %}
-        <h2>
-          {%- for url, title in album.breadcrumb -%}
-          <a href="{{ url }}">{{ title }}</a>
-          {%- if not loop.last %} » {% endif -%}
-          {% endfor -%}
-        </h2>
-        <hr>
-        {% endif %}
-      </header>
-
       <div id="main" role="main">
 
         {% if album.albums %}
@@ -50,46 +26,20 @@
         {% endif %}
 
         {% if album.medias %}
-          {% macro img_description(media) -%}
-            {%- if media.big %}<a href='{{ media.big }}'>Full size</a>{% endif %}
-            {% if media.description %}<br>{{ media.description }}{% endif %}
-
-            {%- if media.exif %}
-              <br>
-              {% if media.exif.iso %}ISO: {{ media.exif.iso }}, {% endif %}
-              {% if media.exif.focal %}Focal: {{ media.exif.focal }}, {% endif %}
-              {% if media.exif.exposure %}Exposure: {{ media.exif.exposure }}, {% endif %}
-              {% if media.exif.fstop %}Fstop: {{ media.exif.fstop }}{% endif %}
-              {% if media.exif.gps %}
-                <br>Location: <a href='https://www.openstreetmap.org/?mlat={{
-                media.exif.gps.lat }}&amp;mlon={{ media.exif.gps.lon}}&amp;zoom=12&amp;layers=M' target='_blank' class='map'
-                >{{ 'N{:.6f}'.format(media.exif.gps.lat) if media.exif.gps.lat > 0 else 'S{:.6f}'.format(-media.exif.gps.lat) }}
-                 {{ 'E{:.6f}'.format(media.exif.gps.lon) if media.exif.gps.lon > 0 else 'W{:.6f}'.format(-media.exif.gps.lon) }}</a>
-              {% endif %}
-              {% if media.exif.datetime %}
-                <br>Date: {{ media.exif.datetime }}
-              {% endif %}
-            {% endif %}
-          {%- endmacro %}
         <div class="icons">
-          <a id="fullscreen"><img src="{{ theme.url }}/img/fullscreen.png"
-            title="Fullscreen" alt="Fullscreen" /></a>
+          <a id="fullscreen">
+            <img src="{{ theme.url }}/img/fullscreen.png" title="Fullscreen" alt="Fullscreen" />
+          </a>
         </div>
         <div id="gallery">
           {% for media in album.medias %}
             {% if media.type == "image" %}
-              <a href="{{ media.filename }}">
-                <img src="{{ media.thumbnail }}" alt="{{ media.filename }}"
-                    data-title="{{ media.title if media.title else media.filename }}"
-                    data-description="{{ img_description(media) }}"
-                    {% if media.big %} data-big="{{ media.big }}"{% endif %} />
-              </a>
+              <a href="{{ media.filename }}"><img src="{{ media.thumbnail }}" alt="{{ media.filename }}" data-title="{{ media.title if media.title else media.filename }}  {{ media.exif.dateobj }}" /></a>
             {% endif %}
             {% if media.type == "video" %}
               <a href="{{ theme.url }}/img/empty.png">
                 <img src="{{ media.thumbnail }}" alt="{{ media.filename }}"
                     data-title="{{ media.title if media.title else media.filename }}"
-                    data-description="{{ img_description(media) }}"
                     data-layer="<video controls>
                                   <source src='{{ media.filename }}' type='{{ media.mime }}' />
                                 </video>" />
@@ -113,6 +63,7 @@
           {{ album.description }}
         </div>
         {% endif %}
+
       </div>
 
       <footer>
