--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,6 +42,7 @@ header h1 a:hover, header h2 a:hover {
 
 #main {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .menu {
@@ -135,6 +136,7 @@ header h1 a:hover, header h2 a:hover {
   line-height: 0;
   flex: 1;
   max-height: 900px;
+  min-width: 250px;
   clear: both;
 }
 #gallery video {
