--- a/static/css/style.css
+++ b/static/css/style.css
@@ -177,6 +177,7 @@ header h1 a:hover, header h2 a:hover {
 
 /* footer */
 footer {
+  font-size: 14px;
   clear: both;
   display: block;
   margin: 1em 0;
