--- a/static/classic/galleria.classic.css
+++ b/static/classic/galleria.classic.css
@@ -15,8 +15,8 @@
   background: #222;
   background: rgba( 0, 0, 0, .15 );
   position: absolute;
-  bottom: 0;
-  top: 80px;
+  top: 0;
+  bottom: 80px;
   left: 10px;
   right: 10px;
   overflow:hidden;
@@ -26,7 +26,7 @@
 }
 .galleria-thumbnails-container {
   height: 70px;
-  top: 0;
+  bottom: 0;
   position: absolute;
   left: 10px;
   right: 10px;
