--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
 
     {% if album.medias %}
     <script src="{{ theme.url }}/js/jquery-1.11.1.min.js"></script>
-    <script src="{{ theme.url }}/js/galleria-1.4.2.min.js"></script>
+    <script src="{{ theme.url }}/js/galleria.min.js"></script>
     <script src="{{ theme.url }}/js/galleria.classic.min.js"></script>
     <script src="{{ theme.url }}/js/galleria.history.min.js"></script>
     <script>
