Use white background for the galleria container, Keeps white background on fullscreen.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -153,7 +153,7 @@ header h1 a:hover, header h2 a:hover {
 }
 
 #gallery .galleria-theme-classic {
-  background-color: transparent;
+  background-color: #fff;
 }
 
 #gallery .galleria-stage {
