--- a/templates/index.html
+++ b/templates/index.html
@@ -29,9 +29,7 @@
 
         {% if album.medias %}
         <div class="icons">
-          <a id="fullscreen">
-            <img src="{{ theme.url }}/img/fullscreen.png" title="Fullscreen" alt="Fullscreen" />
-          </a>
+          <a id="fullscreen"></a>
         </div>
         <div id="gallery">
           {% for media in album.medias %}
