--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 
         {% if album.gallery.full_tree %}
         <div class="menu">
-          {% with albums=album.gallery.full_tree %}
+          {% with albums=album.gallery.full_tree, depth=0 %}
             {% include './menu.html' %}
           {% endwith %}
           <p class="author">{% if album.author %}<a href="http://arne.delaat.net/">{{ album.author }}</a>{% endif %}</p>
