--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,10 +1,13 @@
 {% if albums %}
   <ul>
     {% for name, album_dict in albums.items() %}
-      <li class="album_title"><a href="{{album.path_to_root}}{{ album_dict.self.path_from_root }}">{{ album_dict.self.title }}</a>
-      {% with albums=album_dict.subalbums %}
-        {% include './menu.html' %}
-      {% endwith %}
+      <li class="album_title {% if album_dict.self == album %}current{% endif %}">
+        <a href="{{album.path_to_root}}{{ album_dict.self.path_from_root }}">{{ album_dict.self.title }}</a>
+      {% if album.breadcrumb|length and (depth >= album.breadcrumb|length or name == album.breadcrumb[depth][1]) %}
+          {% with albums=album_dict.subalbums, depth=depth+1 %}
+            {% include './menu.html' %}
+          {% endwith %}
+      {% endif %}
     {% endfor %}
   </ul>
 {% endif %}
