--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,9 +42,9 @@ header h1 a:hover, header h2 a:hover {
 }
 
 .menu {
-  font-variant: all-small-caps;
-  font-weight: bold;
-  font-size: 16px;
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 17px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -57,12 +57,11 @@ header h1 a:hover, header h2 a:hover {
 
 .menu ul ul {
   padding-left: 14px;
-  font-size: 14px;
 }
 
-.menu ul ul ul {
-  padding-left: 20px;
-  font-size: 14px;
+.menu ul ul ul ul ul {
+  font-size: 12px;
+  line-height: 15px;
 }
 
 .menu a,
