Make controls and thumbnail container same height as thumbnails.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -124,6 +124,9 @@ a:hover {
   bottom: auto;
 }
 
+#gallery .galleria-theme-classic .galleria-thumbnails-container,
+#gallery .galleria-theme-classic .galleria-thumb-nav-left,
+#gallery .galleria-theme-classic .galleria-thumb-nav-right,
 #gallery .galleria-thumbnails .galleria-image {
   height: 70px;
 }
