--- a/templates/index.html
+++ b/templates/index.html
@@ -33,9 +33,11 @@
         </div>
         <div id="gallery">
           {% for media in album.medias %}
-            {% if media.type == "image" %}
-              <a href="{{ media.filename }}"><img src="{{ media.thumbnail }}" alt="{{ media.filename }}" data-title="{{ media.title if media.title else media.filename }}  {{ media.exif.dateobj }}" /></a>
-            {% endif %}
+            {% if media.type == "image" -%}
+              <a
+                  href="{{ media.filename }}"><img src="{{ media.thumbnail }}" alt="{{ media.filename }}" data-title="{{ media.title if media.title else media.filename }}  {{ media.exif.dateobj }}" /></a
+              >
+            {%- endif %}
             {% if media.type == "video" %}
               <a href="{{ theme.url }}/img/empty.png">
                 <img src="{{ media.thumbnail }}" alt="{{ media.filename }}"
