Ensure the thumbnails have the same height.

--- a/templates/index.html
+++ b/templates/index.html
@@ -79,6 +79,7 @@
 
     Galleria.configure({
       imageCrop: false,
+      thumbCrop: 'height',
       transition: null,
       clicknext: true,
       showCounter: false,
