--- a/static/css/style.css
+++ b/static/css/style.css
@@ -143,6 +143,14 @@ a:hover {
   bottom: 0;
 }
 
+#gallery .galleria-theme-classic .galleria-loader {
+  width: 50px;
+  height: 50px;
+  top: calc(50% - 25px);
+  right: calc(50% - 25px);
+  background-image: url('../img/loader.svg');
+}
+
 @media (pointer: coarse) {
   #gallery .galleria-theme-classic .galleria-thumbnails-container,
   #gallery .galleria-theme-classic .galleria-thumb-nav-left,
