--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
           {% for media in album.medias %}
             {% if media.type == "image" -%}
               <a
-                  href="{{ media.filename }}"><img src="{{ media.thumbnail }}" alt="{{ media.filename }}" data-title="{{ media.title if media.title else media.filename }}  {{ media.exif.dateobj }}" /></a
+                  href="{{ media.filename }}"><img src="{{ media.thumbnail }}" alt="{{ media.title if media.title else media.filename }}  {{ media.exif.dateobj }}" /></a
               >
             {%- endif %}
             {% if media.type == "video" %}
