--- a/153957_theme/templates/index.html
+++ b/153957_theme/templates/index.html
@@ -39,8 +39,7 @@
               <a
                   href="{{ media.filename }}"><img src="{{ media.thumbnail }}" alt="{{ media.title or media.filename }}  {{ media.exif.dateobj }}" /></a
               >
-            {%- endif %}
-            {% if media.type == "video" %}
+            {%- elif media.type == "video" %}
               <a href="{{ theme.url }}/img/empty.png">
                 <img src="{{ media.thumbnail }}" alt="{{ media.filename }}"
                     data-title="{{ media.title or media.filename }}"
