Add gallery title setting, make this link to root. The author_link is currently not used. Author is used in metadata.

--- a/153957_theme/static/css/style.css
+++ b/153957_theme/static/css/style.css
@@ -64,7 +64,7 @@ a:hover {
   color: #3993C2;
 }
 
-.menu .author {
+.menu .title {
   font-size: 12px;
   margin-top: 5px;
   margin-bottom: 5px;
@@ -91,7 +91,7 @@ a:hover {
     line-height: 26px;
   }
 
-  .menu .author {
+  .menu .title {
     font-size: 16px;
   }
 }
