Fix path to normalize.css

--- a/153957_theme/templates/index.html
+++ b/153957_theme/templates/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="{{ album.author }}">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="{{ theme.url }}/css/vendor/normalize.css">
+    <link rel="stylesheet" href="{{ theme.url }}/css/normalize.css">
     <link rel="stylesheet" href="{{ theme.url }}/classic/galleria.classic.css">
     <link rel="stylesheet" href="{{ theme.url }}/css/style.css">
   </head>
