--- a/153957_theme/templates/base.html
+++ b/153957_theme/templates/base.html
@@ -73,6 +73,7 @@
 
     {% if album.medias %}
     <script src="{{ theme.url }}/js/jquery-3.2.1.min.js"></script>
+    <script src="{{ theme.url }}/js/iframeResizer.contentWindow.min.js"></script>
     <script src="{{ theme.url }}/js/galleria.min.js"></script>
     <script src="{{ theme.url }}/js/galleria.classic.min.js"></script>
     <script src="{{ theme.url }}/js/galleria.history.min.js"></script>
