--- a/153957_theme/templates/base.html
+++ b/153957_theme/templates/base.html
@@ -37,7 +37,7 @@
           {% for media in album.medias %}
             {% if media.type == "image" -%}
               <a
-                  href="{{ media.filename }}"><img src="{{ media.thumbnail }}" alt="{{ media.title or media.filename }}  {{ media.exif.dateobj }}" /></a
+                  href="{{ media.filename }}"><img src="{{ media.thumbnail }}" alt="{{ media.title or media.filename }}  {{ media.exif.dateobj.strftime('%y%m%d %H%M%S') }}" /></a
               >
             {%- elif media.type == "video" %}
               <a href="{{ theme.url }}/img/empty.png">
