--- a/153957_theme/templates/menu.html
+++ b/153957_theme/templates/menu.html
@@ -11,7 +11,7 @@
     {% endif %}
   >
     {% for name, album_dict in albums.items() %}
-      {% with current_ancestor=(album.breadcrumb|length and depth < album.breadcrumb|length and name == album.breadcrumb[depth][1]) %}
+      {% with current_ancestor=(album.breadcrumb|length and depth < album.breadcrumb|length and album_dict.self.title == album.breadcrumb[depth][1]) %}
         <li class="album_title{% if album_dict.self == album %} current{% endif %}{% if current_ancestor %} current_ancestor{% endif %}">
           <a href="{{album.path_to_root}}{{ album_dict.self.path_from_root }}">{{ album_dict.self.title }}</a>
           {% if current_ancestor %}
