--- a/153957_theme/static/css/style.css
+++ b/153957_theme/static/css/style.css
@@ -32,7 +32,7 @@ a:hover {
 .menu {
   font-weight: normal;
   font-size: 13px;
-  line-height: 17px;
+  line-height: 1.4;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -50,7 +50,6 @@ a:hover {
 
 .menu ul ul ul ul ul {
   font-size: 12px;
-  line-height: 15px;
 }
 
 .menu a,
@@ -75,7 +74,7 @@ a:hover {
 @media (pointer: coarse) {
   .menu {
     font-size: 20px;
-    line-height: 30px;
+    line-height: 1.5;
   }
 
   .menu li {
@@ -90,7 +89,6 @@ a:hover {
 
   .menu ul ul ul ul ul {
     font-size: 18px;
-    line-height: 26px;
   }
 
   .menu .title {
