--- a/153957_theme/static/css/style.css
+++ b/153957_theme/static/css/style.css
@@ -1,5 +1,5 @@
 body {
-  margin: 1px;
+  margin: 0;
   background-color: #fff;
   font-family: Arial, sans-serif;
   color: #222;
@@ -8,7 +8,7 @@ body {
 .container {
   margin: 0 auto;
   text-align: left;
-  width: 99%;
+  width: 100%;
 }
 
 #main {
@@ -34,6 +34,7 @@ a:hover {
   font-size: 13px;
   line-height: 1.4;
   display: flex;
+  margin-left: 5px;
   flex-direction: column;
   justify-content: flex-start;
   white-space: nowrap;
@@ -127,7 +128,7 @@ a:hover {
 }
 
 .galleria-container.galleria-theme-classic .galleria-thumbnails-container {
-  top: 0;
+  top: 1px;
   bottom: auto;
 }
 
@@ -140,7 +141,7 @@ a:hover {
 
 .galleria-container.galleria-theme-classic .galleria-stage {
   top: 80px;
-  bottom: 0;
+  bottom: 2px;
 }
 
 .galleria-container.galleria-theme-classic .galleria-loader {
