--- a/153957_theme/templates/base.html
+++ b/153957_theme/templates/base.html
@@ -83,7 +83,7 @@
         transition: null,
         clicknext: true,
         showCounter: false,
-        showInfo: false,
+        showInfo: true,
         transitionSpeed: 0,
         carouselSpeed: 0,
         height: 0.9,
